# rust_urlshortner

./: .gitignore  Cargo.toml  diesel.toml
migrations/2025-09-13-082144-0000_url/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
