[package]
name = "link_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
actix-web = "4"
diesel = { version = "2.3.1", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
chrono = {version  = "0.4.42", features = ["serde"]}
r2d2 = "0.8"
sha2 = "0.10.9"
